# Diabetes_prediction

./: .gitignore  Dockerfile  Dockerfile.full  Dockerfile.streamlit  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-app.txt  requirements-streamlit.txt  requirements.txt
api/: __init__.py  main.py  model_loader.py  schemas.py
app/: streamlit_app.py
conf/: README.md  logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_synthetic.yml
docs/: sqlite_credentials.example.yml
notebooks/: 01_eda.ipynb  baseline_model.py  init_db.py
scripts/: bootstrap_dataset_db.py
src/suml_projekt/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/suml_projekt/pipelines/automl/: __init__.py  nodes.py  pipeline.py
src/suml_projekt/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/suml_projekt/pipelines/synthetic/: __init__.py  nodes.py  pipeline.py
tests/: __init__.py  test_automl_nodes.py  test_nodes.py
tests/pipelines/synthetic/: test_pipeline.py
